Reports feature added + fixes
>Added reports feature
Currently supports yearly book entries and loses
>updated varIndicadores.php
>optimized loading schemes by separating reports tab and only being loaded on demand.
> added global line of code for bootstrap css to help fight extra white space on the right side of some documents
>cleaned some code

--- a/src/css/bootstrap.css
+++ b/src/css/bootstrap.css
@@ -40,7 +40,11 @@
 *::after {
   box-sizing: border-box;
 }
-
+html,
+  body{
+    width:100%;
+    overflow-x:hidden;
+  }
 /*boostrap agregado*/
 html {
   min-height: 100%;
